--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IEDI-M² | Decentralized Sociolinguistic AI</title>
+    <title>I Understand Understand You + (IUUY+) | Decentralized Sociolinguistic AI Series</title>
     <meta name="description" content="A cognitive AI framework for real-time, pragmatic interpretation of global English dialects.">
     
     <!-- Tailwind CSS (CDN for immediate use) -->
@@ -50,7 +50,7 @@
                 Bridging the <span class="text-blue-600">Context Gap</span> in <br class="hidden md:block" />Global Communication.
             </h1>
             <p class="mt-4 max-w-2xl mx-auto text-xl text-slate-600 font-serif leading-relaxed">
-                IEDI-M² is a decentralized, cognitive AI framework that moves beyond literal translation to interpret the <em>intent</em>, <em>tone</em>, and <em>cultural nuance</em> of global English dialects.
+                IEDI-M², the current version in the IUUY+ series, is a decentralized, cognitive AI framework that moves beyond literal translation to interpret the <em>intent</em>, <em>tone</em>, and <em>cultural nuance</em> of global English dialects.
             </p>
             <div class="mt-10 flex justify-center gap-4">
                 <a href="#demo" class="px-8 py-3 bg-blue-600 text-white font-bold rounded-lg hover:bg-blue-700 transition shadow-lg shadow-blue-500/30">
