with Storybook Update index.html

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="max-w-6xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex justify-between h-16 items-center">
                 <div class="flex-shrink-0 flex items-center">
-                    <span class="font-bold text-2xl tracking-tighter text-blue-900">IEDI-M²</span>
+                    <span class="font-bold text-2xl tracking-tighter text-blue-900">IUUY+/IEDI+</span>
                 </div>
                 <div class="hidden md:flex space-x-8">
                     <a href="#problem" class="text-slate-600 hover:text-blue-600 transition">The Problem</a>
@@ -33,6 +33,10 @@
                     <a href="#demo" class="text-slate-600 hover:text-blue-600 transition">Live Demo</a>
                     <a href="#media" class="text-slate-600 hover:text-blue-600 transition">Podcast & Media</a>
                     <a href="#research" class="text-slate-600 hover:text-blue-600 transition">Research</a>
+                    <!-- NEW LINK -->
+                    <a href="https://gemini.google.com/share/19000e418433" target="_blank" class="text-blue-600 font-semibold hover:text-blue-800 transition flex items-center gap-1">
+                        <i data-lucide="book-open" class="w-4 h-4"></i> Story Book
+                    </a>
                 </div>
                 <div>
                     <a href="https://huggingface.co/toecm" target="_blank" class="bg-slate-900 text-white px-4 py-2 rounded-full text-sm font-semibold hover:bg-slate-700 transition">
@@ -51,14 +55,14 @@
                 Bridging the <span class="text-blue-600">Context Gap</span> in <br class="hidden md:block" />Global Communication.
             </h1>
             <p class="mt-4 max-w-2xl mx-auto text-xl text-slate-600 font-serif leading-relaxed">
-                IEDI-M² is a decentralized, cognitive AI framework that moves beyond literal translation to interpret the <em>intent</em>, <em>tone</em>, and <em>cultural nuance</em> of global English dialects.
+                The IUUY+/IEDI+ series is a decentralized, cognitive AI framework that moves beyond literal translation to interpret the <em>intent</em>, <em>tone</em>, and <em>cultural nuance</em> of global English dialects. It is Applied Cognitive Sociolinguistics within Collaborative Computing (CSCW)
             </p>
             <div class="mt-10 flex justify-center gap-4">
                 <a href="#demo" class="px-8 py-3 bg-blue-600 text-white font-bold rounded-lg hover:bg-blue-700 transition shadow-lg shadow-blue-500/30">
                     Try the Prototype
                 </a>
-                <a href="#research" class="px-8 py-3 bg-white text-slate-700 font-bold border border-slate-300 rounded-lg hover:bg-slate-50 transition">
-                    Read the Paper
+                <a href="https://gemini.google.com/share/19000e418433" target="_blank" class="px-8 py-3 bg-white text-slate-700 font-bold border border-slate-300 rounded-lg hover:bg-slate-50 transition flex items-center gap-2">
+                    <i data-lucide="book-open" class="w-4 h-4"></i> Read the Story
                 </a>
             </div>
         </div>
