Papers edited Update index.html

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 Bridging the <span class="text-blue-600">Context Gap</span> in <br class="hidden md:block" />Global Communication.
             </h1>
             <p class="mt-4 max-w-2xl mx-auto text-xl text-slate-600 font-serif leading-relaxed">
-                The IUUY+/IEDI+ series is a decentralized, cognitive AI framework that moves beyond literal translation to interpret the <em>intent</em>, <em>tone</em>, and <em>cultural nuance</em> of global English dialects. It is Applied Cognitive Sociolinguistics within Collaborative Computing (CSCW)
+                The I Understand Understand You + (IUUY+) series which is a continuously evolving framework. It is a decentralized, cognitive AI framework that moves beyond literal translation to interpret the <em>intent</em>, <em>tone</em>, and <em>cultural nuance</em> of global English dialects. Other existing versions of this Applied Cognitive Sociolinguistics within Collaborative Computing (CSCW) system include the Intra-English Dialect Interpretattion (IEDI), Choose Your Character Experience (CYCx) models.
             </p>
             <div class="mt-10 flex justify-center gap-4">
                 <a href="#demo" class="px-8 py-3 bg-blue-600 text-white font-bold rounded-lg hover:bg-blue-700 transition shadow-lg shadow-blue-500/30">
@@ -206,10 +206,10 @@
                     </div>
                     <div>
                         <h3 class="text-xl font-bold text-slate-900 group-hover:text-blue-600 transition">
-                            IEDI-M²: Engineering a Scalable, Decentralized Architecture
+                            I Understand Understand You (IUUY): A Reliable Multi-Agent Facilitator for Reducing Communication Breakdowns
                         </h3>
                         <p class="text-slate-600 mt-2 text-sm leading-relaxed">
-                            A deep dive into the migration from monolithic prototypes to a microservices-based mobile ecosystem using FastAPI and React Native.
+                            This research not only improves active listening and fosters inclusion but also advances inclusive AI ethics in line with major international frameworks.
                         </p>
                         <div class="mt-4 flex gap-4">
                             <a href="#" class="text-sm font-semibold text-blue-600 hover:underline">Read Abstract</a>
@@ -227,10 +227,10 @@
                     </div>
                     <div>
                         <h3 class="text-xl font-bold text-slate-900 group-hover:text-blue-600 transition">
-                            Beyond Syntax: Synergizing Acoustic Accent Profiling
+                            IEDI: A Hybrid NLP-LLM Framework for Intra-English Dialect Interpretation
                         </h3>
                         <p class="text-slate-600 mt-2 text-sm leading-relaxed">
-                            Exploring the "Unified Brain" methodology: how combining Wav2Vec2 accent detection with pragmatic agents resolves polysemy in high-context dialects.
+                            The IEDI framework represents a step toward inclusive, dialect-aware AI capable of interpreting rather than normalizing English dialects.
                         </p>
                         <div class="mt-4 flex gap-4">
                             <a href="#" class="text-sm font-semibold text-blue-600 hover:underline">Read Abstract</a>
@@ -245,7 +245,7 @@
     <!-- FOOTER -->
     <footer class="bg-slate-900 text-slate-400 py-12">
         <div class="max-w-6xl mx-auto px-4 text-center">
-            <p class="mb-4">&copy; 2025 IEDI-M² Project. All rights reserved.</p>
+            <p class="mb-4">&copy; 2025 IUUY+, IEDI+, and CYCx+ Projects. All rights reserved.</p>
             <div class="flex justify-center gap-6">
                 <a href="#" class="hover:text-white transition">GitHub</a>
                 <a href="#" class="hover:text-white transition">Hugging Face</a>
