Corrected Abstract Update index.html

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 Bridging the <span class="text-blue-600">Context Gap</span> in <br class="hidden md:block" />Global Communication.
             </h1>
             <p class="mt-4 max-w-2xl mx-auto text-xl text-slate-600 font-serif leading-relaxed">
-                The I Understand Understand You + (IUUY+) series which is a continuously evolving framework. It is a decentralized, cognitive AI framework that moves beyond literal translation to interpret the <em>intent</em>, <em>tone</em>, and <em>cultural nuance</em> of global English dialects. Other existing versions of this Applied Cognitive Sociolinguistics within Collaborative Computing (CSCW) system include the Intra-English Dialect Interpretattion (IEDI), Choose Your Character Experience (CYCx) models.
+                The I Understand Understand You + (IUUY+) series is a continuously evolving applied cognitive Sociolinguistics within collaborative computing (CSCW) system. It is a decentralized, cognitive AI framework that moves beyond literal translation to interpret the <em>intent</em>, <em>tone</em>, and <em>cultural nuance</em> of global English dialects. Other existing versions of this include the Intra-English Dialect Interpretattion (IEDI), Choose Your Character Experience (CYCx) models.
             </p>
             <div class="mt-10 flex justify-center gap-4">
                 <a href="#demo" class="px-8 py-3 bg-blue-600 text-white font-bold rounded-lg hover:bg-blue-700 transition shadow-lg shadow-blue-500/30">
