--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <a href="#media" class="text-slate-600 hover:text-blue-600 transition">Podcast & Media</a>
                     <a href="#research" class="text-slate-600 hover:text-blue-600 transition">Research</a>
                     <!-- NEW LINK -->
-                    <a href="https://gemini.google.com/share/19000e418433" target="_blank" class="text-blue-600 font-semibold hover:text-blue-800 transition flex items-center gap-1">
+                    <a href="https://youtu.be/1L_LAhi2XRg" target="_blank" class="text-blue-600 font-semibold hover:text-blue-800 transition flex items-center gap-1">
                         <i data-lucide="book-open" class="w-4 h-4"></i> Story Book
                     </a>
                 </div>
