YT Storybook Update index.html
YT storybook tab and section added

--- a/index.html
+++ b/index.html
@@ -179,9 +179,22 @@
                             </div>
                             <h3 class="text-xl font-bold text-slate-900 mb-3">Project Overview & Version Demos</h3>
                             <p class="text-slate-600 mb-4">
-                                A deep dive into the IEDI-M² ecosystem, featuring discussions on the evolution of the framework and demonstrations of previous system iterations.
+                                A deep dive into the IUUY and IEDI-M² ecosystem, featuring discussions on the evolution of the framework and demonstrations of previous and current system variations.
                             </p>
                             <a href="https://youtu.be/VROy48igniY?si=fijBmaKRTu7VHhEU" target="_blank" class="inline-flex items-center text-blue-600 font-semibold hover:underline">
+                                Watch on YouTube <i data-lucide="external-link" class="w-4 h-4 ml-1"></i>
+                            </a>
+                        </div>
+                        <div class="w-full md:w-1/2">
+                            <div class="flex items-center gap-2 mb-2">
+                                <span class="bg-red-100 text-red-600 text-xs px-2 py-1 rounded-full font-bold">YouTube</span>
+                                <span class="text-slate-500 text-sm">Podcast</span>
+                            </div>
+                            <h3 class="text-xl font-bold text-slate-900 mb-3">Storybook Explanations of Research</h3>
+                            <p class="text-slate-600 mb-4">
+                                Introduction of the IUUY and IEDI-M² ecosystem, featuring the storybook explanation of the research. The storybooks were generated with Google Gemini Storybook
+                            </p>
+                            <a href="https://youtu.be/1L_LAhi2XRg" target="_blank" class="inline-flex items-center text-blue-600 font-semibold hover:underline">
                                 Watch on YouTube <i data-lucide="external-link" class="w-4 h-4 ml-1"></i>
                             </a>
                         </div>
