--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     </a>
                 </div>
                 <div>
-                    <a href="https://huggingface.co/toecm" target="_blank" class="bg-slate-900 text-white px-4 py-2 rounded-full text-sm font-semibold hover:bg-slate-700 transition">
+                    <a href="https://huggingface.co/datasets/toecm/IEDID" target="_blank" class="bg-slate-900 text-white px-4 py-2 rounded-full text-sm font-semibold hover:bg-slate-700 transition">
                         View Dataset
                     </a>
                 </div>
