Update link to new community dataset site
Changed link to the PureVersation React game link

--- a/index.html
+++ b/index.html
@@ -141,8 +141,8 @@
                 <div class="aspect-video w-full bg-slate-100 rounded-lg flex items-center justify-center flex-col">
                     <!-- IFRAME GOES HERE -->
                     <p class="text-slate-500 mb-4">Interactive Demo Loading...</p>
-                    <a href="https://huggingface.co/spaces" target="_blank" class="text-blue-600 font-semibold hover:underline">
-                        Open in Hugging Face Spaces ↗
+                    <a href="https://pureversation.vercel.app" target="_blank" class="text-blue-600 font-semibold hover:underline">
+                        Start Contributing to Your Community's English Dataset ↗
                     </a>
                 </div>
                 <p class="mt-4 text-sm text-slate-500">
