--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
                 Bridging the <span class="text-blue-600">Context Gap</span> in <br class="hidden md:block" />Global Communication.
             </h1>
             <p class="mt-4 max-w-2xl mx-auto text-xl text-slate-600 font-serif leading-relaxed">
+                <a href="https://pureversation.vercel.app" target="_blank" class="text-blue-600 font-semibold hover:underline">
                 The <em>I Understand Understand You + (IUUY+)</em> series is a continuously evolving applied cognitive sociolinguistics within collaborative computing system. It is a computer-supported cooperative work (CSCW), and a decentralized, cognitive AI framework that moves beyond literal translation to interpret the <em>intent</em>, <em>tone</em>, and <em>cultural nuance</em> of global English dialects. Other existing versions of this include the <em>Intra-English Dialect Interpretattion (IEDI)</em>, and <em>Choose Your Character Experience (CYCx)</em> models.
             </p>
             <div class="mt-10 flex justify-center gap-4">
