Update link to watch the storybook

--- a/index.html
+++ b/index.html
@@ -55,15 +55,14 @@
                 Bridging the <span class="text-blue-600">Context Gap</span> in <br class="hidden md:block" />Global Communication.
             </h1>
             <p class="mt-4 max-w-2xl mx-auto text-xl text-slate-600 font-serif leading-relaxed">
-                <a href="https://pureversation.vercel.app" target="_blank" class="text-blue-600 font-semibold hover:underline">
                 The <em>I Understand Understand You + (IUUY+)</em> series is a continuously evolving applied cognitive sociolinguistics within collaborative computing system. It is a computer-supported cooperative work (CSCW), and a decentralized, cognitive AI framework that moves beyond literal translation to interpret the <em>intent</em>, <em>tone</em>, and <em>cultural nuance</em> of global English dialects. Other existing versions of this include the <em>Intra-English Dialect Interpretattion (IEDI)</em>, and <em>Choose Your Character Experience (CYCx)</em> models.
             </p>
             <div class="mt-10 flex justify-center gap-4">
                 <a href="#demo" class="px-8 py-3 bg-blue-600 text-white font-bold rounded-lg hover:bg-blue-700 transition shadow-lg shadow-blue-500/30">
                     Try the Prototype
                 </a>
-                <a href="https://gemini.google.com/share/19000e418433" target="_blank" class="px-8 py-3 bg-white text-slate-700 font-bold border border-slate-300 rounded-lg hover:bg-slate-50 transition flex items-center gap-2">
-                    <i data-lucide="book-open" class="w-4 h-4"></i> Read the Story
+                <a href="https://www.youtube.com/watch?v=1L_LAhi2XRg" target="_blank" class="px-8 py-3 bg-white text-slate-700 font-bold border border-slate-300 rounded-lg hover:bg-slate-50 transition flex items-center gap-2">
+                    <i data-lucide="book-open" class="w-4 h-4"></i> Watch the Storybook
                 </a>
             </div>
         </div>
