Update Gemini version and add links to research paper

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                     </a>
                 </div>
                 <p class="mt-4 text-sm text-slate-500">
-                    Running on <strong>Gemini 1.5 Pro</strong> (Dynamic Switching) & <strong>Whisper Large-v3</strong>.
+                    Running on <strong>Gemini 2.0 Pro</strong> (Dynamic Switching) & <strong>Whisper Large-v3</strong>.
                 </p>
             </div>
         </div>
@@ -225,8 +225,8 @@
                             This research not only improves active listening and fosters inclusion but also advances inclusive AI ethics in line with major international frameworks.
                         </p>
                         <div class="mt-4 flex gap-4">
-                            <a href="#" class="text-sm font-semibold text-blue-600 hover:underline">Read Abstract</a>
-                            <a href="#" class="text-sm font-semibold text-slate-500 hover:text-slate-800">Download PDF</a>
+                            <a href="https://ieeexplore.ieee.org/document/11389096" class="text-sm font-semibold text-blue-600 hover:underline">Read Abstract</a>
+                            <a href="https://ieeexplore.ieee.org/document/11389096" class="text-sm font-semibold text-slate-500 hover:text-slate-800">Download PDF</a>
                         </div>
                     </div>
                 </div>
