Update Read Abstract link to external URL

--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
                             The IEDI framework represents a step toward inclusive, dialect-aware AI capable of interpreting rather than normalizing English dialects.
                         </p>
                         <div class="mt-4 flex gap-4">
-                            <a href="#" class="text-sm font-semibold text-blue-600 hover:underline">Read Abstract</a>
+                            <a href="https://www.dbpia.co.kr/Journal/articleDetail?nodeId=NODE12566903" class="text-sm font-semibold text-blue-600 hover:underline">Read Abstract</a>
                             <a href="#" class="text-sm font-semibold text-slate-500 hover:text-slate-800">Download PDF</a>
                         </div>
                     </div>
